--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "knex": "^0.21.2",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "pg": "^8.11.3"
   }
 }
