--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^0.21.2",
     "mysql2": "^2.1.0",
     "pg": "^8.11.3"
